[project]
name = "clinisight"
version = "1.0.0"
description = "AI-powered clinical decision support: symptom extraction, differential diagnosis, and PubMed literature synthesis."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "Clinisight Team" }]
keywords = ["medical", "clinical", "ai", "nlp", "pubmed", "diagnosis"]

dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.2",
    "lxml>=6.0.2",
    "mcp[cli]>=1.21.0",
    "openai>=2.8.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # for FastAPI test client
    "ruff>=0.4.0",
]

[project.scripts]
clinisight = "app:app"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
